[package]
name = "lvcs-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
diffy.workspace = true
fs2.workspace = true
ignore.workspace = true
thiserror.workspace = true
time.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile = "3.24"
