[package]
name = "lvcs-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls = "0.23"
tokio.workspace = true
lvcs-core = { path = "../lvcs-core" }

[dev-dependencies]
tempfile = "3.10"
